2010-03-02  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* src/configure.ac: New option "--enable-international".
	
	* src/Makefile.am(target gv_class.ad): Enable international if requested

2010-03-02  Yasuyuki Furukawa <yasu@on.cs.keio.ac.jp>

	* src/callbacks.c(setTitle): New function for supporting UTF-8 titles
	
	* src/callbacks.c(showTitle): call setTitle
	
	* src/misc.c(setup_ghostview): likewise

2010-03-01  Dr. Werner Fink <werner@suse.de>
	    Yasuyuki Furukawa <yasu@on.cs.keio.ac.jp>
            Markus Steinborn <gnugv_maintainer@yahoo.de>

	* Makefile.am: Include README.I18N in distribuation
	
	* src/main.c(main): Correcting environment, calling XtSetLanguageProc
	
	* src/Makefile.am: Handling of new source files
	
	* src/info.c, src/misc_private.c, src/dialog.c: Properly handle
	the case that international is enabled.
	
	* src/gv_misc_res.dat: Add resource "GV*fileSelPopup.title"
	
	* src/gv_font_res-I18N_mb.dat: New filw with extra resources for I18N.

2010-02-27  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* configure.ac, src/versionp.h: Bumped version to 3.6.8.90

2009-12-25  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* configure.ac, src/versionp.h: Bumped version to 3.6.8

2009-12-08  Markus Steinborn <gnugv_maintainer@yahoo.de>
	* src/scale.c(scale_parseScales): Fixed Scale "Fit to height", it
	wasn't added o the scale menu

2009-09-05  Andrew Hamilton <Andrew.Hamilton@colorado.edu>

	* src/main.c: use getopt's built-in option counter
	
	* src/Ghostview.c (StartInterpreter): Call ghostscript with an
	additional option "-dNOPROMPT"
	  
	* src/Ghostview.c: (StartInterpreter, GhostviewNextPage): 
	Handle "-" as filename
	
	* src/zoom.c (zoom_createZoom): Fix checking for "no file"
	
	* src/zoom.c (zoom_createZoom): Handle "-" as filename
	
	* src/resource.c (resource_buildDatabase): Handle resource "arguments"

2009-05-18  Markus Steinborn <gnugv_maintainer@yahoo.de>
            Stefan Uhl <s.uhl@gmx.net>
