@@ -31,7 +31,9 @@
 #include "ac_config.h"
 
 #include "config.h"
-#include "VlistP.h"
+#ifdef HAVE_XAW3D_INTERNATIONAL
+   #include "VlistP.h"
+#endif
 
 #include <stdio.h>
 
@@ -273,27 +275,34 @@ void DialogPopupSetText(s)
     Arg args[10];
     Cardinal n;
     Widget response;
+#ifdef HAVE_XAW3D_INTERNATIONAL
     VlistWidget vw;
+#endif
     Dimension width;
 #   define DIALOG_POPUP_FREE_SPACE 50
 #   define DIALOG_POPUP_TEXT_MIN_WIDTH 100
     String os;
     Dimension lm,rm,bw,nw;
+#ifdef HAVE_XAW3D_INTERNATIONAL
     XFontSet     fontset;
+#endif
     XFontStruct *font;
 
     BEGINMESSAGE(DialogPopupSetText)
     if (!s) {INFMESSAGE(no text) ENDMESSAGE(DialogPopupSetText) return;}
     if (!dialogPopupCreated) makeDialogPopup();
     response = XtNameToWidget(DIALOG_POPUP, "*dialog_text");
+#ifdef HAVE_XAW3D_INTERNATIONAL
     vw = (VlistWidget)response;
-
     						n=0;
     if( vw->simple.international == True ) {
       XtSetArg(args[n], XtNfontSet, &fontset);	n++;
     } else {
+#endif
       XtSetArg(args[n], XtNfont, &font);	n++;
+#ifdef HAVE_XAW3D_INTERNATIONAL
     }
+#endif
     XtSetArg(args[n], XtNleftMargin, &lm);	n++;
     XtSetArg(args[n], XtNrightMargin, &rm);	n++;
     XtSetArg(args[n], XtNborderWidth, &bw);	n++;
@@ -301,9 +310,11 @@ void DialogPopupSetText(s)
     XtSetArg(args[n], XtNwidth, &width);	n++;
     XtGetValues(response, args, n);
     						n=0;
+#ifdef HAVE_XAW3D_INTERNATIONAL
     if( vw->simple.international == True )
       nw=	XmbTextEscapement( fontset, s, strlen(s));
     else
+#endif
       nw= ((font->max_bounds.width+font->min_bounds.width)*((Dimension)strlen(s))+1)/2;
     nw += lm+rm+DIALOG_POPUP_FREE_SPACE+2*bw;
 
