@@ -80,32 +80,42 @@ update_label(widget,text)
    if (text) {      /* most of the following comes from X11/Xaw/Label.c */
       Position x,y;
       INFSMESSAGE(update_label,text)
+#ifdef HAVE_XAW3D_INTERNATIONAL
       if( vw->simple.international == True ) {
 	y = w->label.label_y - XExtentsOfFontSet(w->label.fontset)->max_logical_extent.y;
       } else {
+#endif
 	y = w->label.label_y + w->label.font->max_bounds.ascent;
+#ifdef HAVE_XAW3D_INTERNATIONAL
       }
+#endif
       if (w->label.justify == XtJustifyCenter) {
          unsigned int width;
          int len = (int) strlen(text);
+#ifdef HAVE_XAW3D_INTERNATIONAL
 	 if( vw->simple.international == True ) {
 	   XFontSet     fs = w->label.fontset;
 	   width = XmbTextEscapement(fs, text, (int)len );
 	 } else {
+#endif
 	   XFontStruct *fs = w->label.font;
 	   if   (w->label.encoding) width = XTextWidth16 (fs, (XChar2b*)text, (int)(len/2) );
 	   else                     width = XTextWidth   (fs, text          , (int)(len)   );
+#ifdef HAVE_XAW3D_INTERNATIONAL
 	 }
+#endif
          x = (Position) ((w->core.width-width)/2);
       } else {
          x = w->label.internal_width + w->threeD.shadow_width;
       }
 
+#ifdef HAVE_XAW3D_INTERNATIONAL
       if( vw->simple.international == True ) {
 	XmbDrawString(XtDisplay(widget), XtWindow(widget),
 		      w->label.fontset, w->label.normal_GC,
 		      x, y, text, (int)(strlen(text)));
       } else {
+#endif
 	if (w->label.encoding) {
 	   XDrawString16(XtDisplay(widget), XtWindow(widget),
                          w->label.normal_GC,
@@ -115,7 +125,9 @@ update_label(widget,text)
                        w->label.normal_GC,
 	  	       x, y, text, (int)(strlen(text)));
 	}
+#ifdef HAVE_XAW3D_INTERNATIONAL
       }
+#endif
    }
 
    ENDMESSAGE1(update_label)
