@@ -1,3 +1,15 @@
+2010-03-03  Markus Steinborn <gnugv_maintainer@yahoo.de>
+
+	* src/configure.ac: if no international support is available in Xaw3d, 
+	do not abort.
+	
+	* src/configure.ac: setenv-test: if --disable-setenv-code is given, continue 
+	without testing for setenv support
+
+	* src/dialog.c, src/info.c, src/misc_private.c, src/Vlist.c: Use
+	#ifdef-s to enable compilation on Xaw3d-1.5 by disabling all
+	if "international"-parts statements and leaving only their "else case".
+
 2010-03-02  Markus Steinborn <gnugv_maintainer@yahoo.de>
 
 	* src/configure.ac: New option "--enable-international".
